--- a/Try1/Try1/MainWindow.xaml
+++ b/Try1/Try1/MainWindow.xaml
@@ -215,15 +215,23 @@
                             <RowDefinition Height="2" />
                         </Grid.RowDefinitions>
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            
                             <TextBlock
-                                Width="300"
+                                Width="80"
                                 Margin="30,10,0,0"
+                                HorizontalAlignment="Right"
                                 FontFamily="Segoe UI"
                                 FontSize="20"
                                 FontWeight="Normal"
                                 Foreground="#2E3A47"
-                                Text="Message" />
+                                Text="Code " />
+                            <TextBlock
+                                Width="300"
+                                Margin="10,10,0,0"
+                                FontFamily="Segoe UI"
+                                FontSize="20"
+                                FontWeight="Normal"
+                                Foreground="#2E3A47"
+                                Text="Message  " />
                             <TextBlock
                                 Width="100"
                                 Margin="0,10,0,0"
@@ -240,7 +248,7 @@
                                 FontSize="20"
                                 FontWeight="Normal"
                                 Foreground="#2E3A47"
-                                Text="Frecuency" />
+                                Text="Frecuency " />
                             <TextBlock
                                 Width="120"
                                 Margin="0,10,0,0"
@@ -282,9 +290,18 @@
                             VerticalAlignment="Bottom"
                             Orientation="Horizontal">
                             <TextBlock
+                                Name="Code_Field"
+                                Width="80"
+                                FontFamily="Segoe UI"
+                                Margin="20,0,0,0"
+                                FontSize="20"
+                                FontWeight="Light"
+                                Foreground="#193566"
+                                Text="{x:Bind Code}" />
+                            <TextBlock
                                 Name="Name_Field"
                                 Width="300"
-                                Margin="20,0,0,0"
+                                Margin="10,0,0,0"
                                 FontFamily="Segoe UI"
                                 FontSize="20"
                                 FontWeight="Normal"
