--- a/Try1/Try1/MainWindow.xaml
+++ b/Try1/Try1/MainWindow.xaml
@@ -360,7 +360,8 @@
                 Fill="White"
                 RadiusX="25"
                 RadiusY="25" />
-       
+  
+
 
         <Path Stroke="#007AFF" StrokeThickness="35" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top">
         <Path.Data>
@@ -370,7 +371,7 @@
                         <PathFigure x:Name="testchartOEE" StartPoint="1250,50">
                             <PathFigure.Segments>
                                 <PathSegmentCollection>
-                                    <ArcSegment  x:Name="DirectionOEE" Size="200,200"  RotationAngle="0" IsLargeArc="True"  SweepDirection="Clockwise" Point="1249,50" />
+                                    <ArcSegment  x:Name="DirectionOEE" Size="200,200"  RotationAngle="0" IsLargeArc="True"  SweepDirection="Counterclockwise" Point="1249,50" />
                                 </PathSegmentCollection>
                             </PathFigure.Segments>
                         </PathFigure>
@@ -401,7 +402,25 @@
          FontSize="60"
          FontWeight="Normal"
          Foreground="#2E3A47"
-          />
+            Text="100%"         
+            />
+        <!-- Punto de arriba 1250,50
+            Centro=1250,250
+            Punto=1250, 450
+        
+        -->
+        <Ellipse 
+            Grid.Row="0"
+            Grid.Column="0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" 
+            Fill="Red"
+            Width="1"
+            Height="1"
+            Stroke="red"
+            Margin="1250,250,0,0"
+            
+            />
 
     </Grid>
 
